tests/fail/iterator_outlive_db.stderr
error[E0597]: `db` does not live long enough
 --> tests/fail/iterator_outlive_db.rs:7:9
  |
5 |     let _iter = {
  |         ----- borrow later stored here
6 |         let db = DB::open_default("foo").unwrap();
  |             -- binding `db` declared here
7 |         db.iterator(IteratorMode::Start)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ borrowed value does not live long enough
8 |     };
  |     - `db` dropped here while still borrowed
